Fix hats overlapping autocompletion box

--- a/dubtrack/dubtrack.css
+++ b/dubtrack/dubtrack.css
@@ -125,3 +125,7 @@
     z-index: 1;
     pointer-events: none;
 }
+
+#autocomplete-preview{
+    z-index: 2;
+}
